--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,18 @@
-import com.android.build.gradle.internal.tasks.databinding.DataBindingExportBuildInfoTask
-
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
-
-buildscript {
-    ext.kotlin_version = "1.0.5-eap-83"
-
-    repositories {
-        jcenter()
-        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-    }
-}
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.github.drunlin.webappbox"
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 27
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -49,58 +34,43 @@ android {
         }
     }
 
-    sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
-    }
-
     dataBinding {
         enabled = true
     }
 }
 
-kapt {
-    generateStubs = true
-}
-
-repositories {
-    maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
-}
-
 dependencies {
-    compile fileTree(include: ["*.jar"], dir: "libs")
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "com.android.support:appcompat-v7:25.0.0"
-    compile "com.android.support:design:25.0.0"
-    compile "com.android.support:cardview-v7:25.0.0"
-    compile "com.android.support:preference-v7:25.0.0"
-    compile "com.android.support:preference-v14:25.0.0"
-    compile "com.thebluealliance:spectrum:0.6.0"
-    compile "com.github.rahatarmanahmed:circularprogressview:2.5.0"
-    kapt "com.android.databinding:compiler:2.2.2"
-    compile "com.google.dagger:dagger:2.5"
+    implementation fileTree(include: ["*.jar"], dir: "libs")
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation "com.android.support:appcompat-v7:27.0.2"
+    implementation "com.android.support:design:27.0.2"
+    implementation "com.android.support:cardview-v7:27.0.2"
+    implementation "com.android.support:preference-v7:27.0.2"
+    implementation "com.android.support:preference-v14:27.0.2"
+    kapt "com.android.databinding:compiler:3.1.2"
+
+    implementation "com.thebluealliance:spectrum:0.6.0"
+
+    implementation "com.github.rahatarmanahmed:circularprogressview:2.5.0"
+
+    implementation "com.google.dagger:dagger:2.5"
     kapt "com.google.dagger:dagger-compiler:2.5"
-    compile "io.reactivex:rxjava:1.1.5"
-    compile "io.reactivex:rxandroid:1.2.0"
-    compile "com.jakewharton.rxbinding:rxbinding-design:0.4.0"
-    compile "com.jakewharton.rxbinding:rxbinding:0.4.0"
-    compile "com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0"
-    compile "org.jsoup:jsoup:1.9.2"
 
-    testCompile "junit:junit:4.12"
-    testCompile "org.robolectric:robolectric:3.0"
+    implementation "io.reactivex:rxjava:1.1.5"
+    implementation "io.reactivex:rxandroid:1.2.0"
 
-    androidTestCompile "com.android.support:support-annotations:25.0.0"
-    androidTestCompile "com.android.support.test:runner:0.5"
-    androidTestCompile "com.android.support.test:rules:0.5"
-}
+    implementation "com.jakewharton.rxbinding:rxbinding-design:0.4.0"
+    implementation "com.jakewharton.rxbinding:rxbinding:0.4.0"
+    implementation "com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0"
 
-/**
- * Workaround for https://code.google.com/p/android/issues/detail?id=182715
- */
-tasks.withType(DataBindingExportBuildInfoTask) { task ->
-    if (task.name.endsWith("AndroidTest")) {
-        task.finalizedBy(tasks.create("${task.name}Workaround") << {
-            task.output.deleteDir()
-        })
-    }
+    implementation "org.jsoup:jsoup:1.9.2"
+
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.robolectric:robolectric:3.0"
+
+    androidTestImplementation "com.android.support:support-annotations:27.1.1"
+    androidTestImplementation "com.android.support.test:runner:1.0.1"
+    androidTestImplementation "com.android.support.test:rules:1.0.1"
 }
