--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 buildscript {
+    ext.kotlin_version = "1.2.41"
+
     repositories {
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        mavenCentral()
     }
 }
 
