--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: "kotlin-android-extensions"
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.github.drunlin.webappbox"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 2
         versionName "1.1"
 
@@ -44,12 +44,13 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation "com.android.support:appcompat-v7:27.0.2"
-    implementation "com.android.support:design:27.0.2"
-    implementation "com.android.support:cardview-v7:27.0.2"
-    implementation "com.android.support:preference-v7:27.0.2"
-    implementation "com.android.support:preference-v14:27.0.2"
-    kapt "com.android.databinding:compiler:3.1.2"
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation "com.android.support:support-v4:28.0.0"
+    implementation "com.android.support:design:28.0.0"
+    implementation "com.android.support:cardview-v7:28.0.0"
+    implementation "com.android.support:preference-v7:28.0.0"
+    implementation "com.android.support:preference-v14:28.0.0"
+    kapt 'androidx.databinding:databinding-compiler:3.2.1'
 
     implementation "com.thebluealliance:spectrum:0.6.0"
 
@@ -70,7 +71,7 @@ dependencies {
     testImplementation "junit:junit:4.12"
     testImplementation "org.robolectric:robolectric:3.0"
 
-    androidTestImplementation "com.android.support:support-annotations:27.1.1"
-    androidTestImplementation "com.android.support.test:runner:1.0.1"
-    androidTestImplementation "com.android.support.test:rules:1.0.1"
+    androidTestImplementation "com.android.support:support-annotations:28.0.0"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test:rules:1.0.2"
 }
