--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,14 @@
             android:exported="true"
             android:taskAffinity=""/>
         <activity
+            android:name=".activity.SelectActivity"
+            android:label="@string/apps">
+            <intent-filter>
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".activity.WebappActivity"
             android:documentLaunchMode="always"
             android:taskAffinity=""
